crates/apollo-compiler/test_data/diagnostics/0047_duplicate_field_arguments.txt
Error: the argument `arg` is provided multiple times
   ╭─[0047_duplicate_field_arguments.graphql:5:21]
   │
 5 │   single(arg: true, arg: false)
   │          ────┬────  ─────┬────  
   │              ╰────────────────── previously provided `arg` here
   │                          │      
   │                          ╰────── `arg` provided again here
   │ 
   │ Help: `arg` argument must only be provided once.
───╯

